tests/ui/typeck/issue-87181/tuple-method.stderr
error[E0599]: no method named `foo` found for struct constructor `{fn item Foo: fn(u8, i32) -> Foo}` in the current scope
  --> $DIR/tuple-method.rs:12:15
   |
LL |     thing.bar.foo();
   |               ^^^ method not found in `{fn item Foo: fn(u8, i32) -> Foo}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
